# disputable-values-monitor

./: .env.example  .env.example.testnet  .gitmodules  Dockerfile  README.md  change_address.py  change_disputer_config.py  contract-monitor.yaml  disputer-config.yaml  docker-compose.yml  docker_run.sh  expect.py  initialize_docker.py  initialize_dvm_docker.py  install.sh  managed-feeds.yaml  podinit.sh  pyproject.toml  requirements.txt  runtime.sh  setup.cfg  vars.example.sh
.github/workflows/: deploy.yml  release.yml  submodule.yml  submodule_sync.yml
src/fetch_disputables/: ContractMonitor.py  ManagedFeeds.py  Ses.py  Slack.py  __init__.py  alerts.py  cli.py  config.py  data.py  dispute_all.py  disputer.py  handle_connect_endpoint.py  remove_report.py  utils.py
templates/: template_contract_directory.json  template_disputer_config.yaml
tests/: __init__.py  conftest.py  test_alerts.py  test_auto_dispute_multiple_ids.py  test_config.py  test_demo.py  test_dispute_alerts.py  test_disputer.py  test_mimicry_dispute.py  test_utils.py
