[tool.poetry]
name = "fetch-disputables"
version = "1.4.2"
description = "dashboard & text alerts for disputable values reported to Fetch oracles"
authors = ["tallywiesenberg <info@fetch.io>"]
license = "MIT"
packages = [{ include = "fetch_disputables", from = "src" }]
include = ["vars.example.sh", "README.md", "disputer-config.yaml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
twilio = "^7.7.0"
web3 = "^5.27.0"
pandas = "^1.4.1"
tabulate = "^0.8.9"
pytest-asyncio = "^0.19.0"
telliot-core = {path = "../telliot-core", develop = true}
telliot-feeds = {path = "../telliot-feeds", develop = true}
click = "^8.1.3"
pydantic = "^1.10.2"
python-box = "^7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.3.0"
pre-commit = "^2.17.0"
mypy = "^0.942"
types-python-dateutil = "^2.8.10"
types-PyYAML = "*"
py-solc-x = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "fetch_disputables.cli:main"
data = "fetch_disputables.data:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
