[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=fetch_disputables
version = 1.4.2
author=tallywiesenberg
author_email=info@fetchoracle.com
description= dashboard & text alerts for disputable values reported to Fetch oracles.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/fetchoracle/disputable-values-monitor
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: System :: Networking
    Topic :: Office/Business :: Financial
    Programming Language :: Python :: 3.9
keywords=
    oracle
    ethereum
    blockchain


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
install_requires =
    twilio==7.7.0
    web3==5.28.0
    pandas==1.4.1
    tabulate==0.8.9
    pytest-asyncio==0.19.0
    click==8.1.3
    pydantic==1.10.2
    python-box==7.0.1
    pytest==7.1.0
    black==22.3.0
    pre-commit==2.17.0
    mypy==0.942
    types-python-dateutil==2.8.10
    types-PyYAML
    py-solc-x==1.1.1
    chained-accounts==0.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli = fetch_disputables.cli:main
    data = fetch_disputables.data:main

